<resources>
    <string name="app_name">Working calendar</string>
    <string name="action_settings">Settings</string>
    <string name="selected_day">%s %d %s, %d</string>
    <string name="coma_separated">%s, %d</string>
    <string name="month_days_info">%d days off, %d working days</string>
    <string name="time_off">Time off</string>
    <string name="time_off_unpaid">Unpaid time off</string>
    <string name="sick_leave">Sick leave</string>
    <string name="overtime">Overtime</string>
    <string name="work_time">Working time</string>
    <string name="holiday">Holiday - %s</string>
    <string name="no_info">No information</string>
    <string name="unpaid_time_off_hours">Unpaid time off hours: %d</string>
    <string name="time_off_hours">Time off hours: %d</string>
    <string name="time_off_sick_hours">Sick leave hours: %d</string>
    <string name="overtime_hours">Overtime hours: %d</string>
    <string name="work_hours">Working time hours: %d</string>
    <string name="text_welcome">Welcome to Calendar app</string>
    <string name="hint_salary">Enter Salary</string>
    <string name="hint_pto_days">Enter paid time off days</string>
    <string name="button_continue">Continue</string>
    <string name="error_input">This field is mandatory</string>
    <string name="input_hours">Please enter %s</string>
    <string name="hint_remaining_days">Remaining hours %d of %d</string>
    <string name="no_days_left">No days left</string>
    <string name="salary">Salary per hour %.2fлв\nSalary for month %dлв / %dлв</string>
    <string name="exit">Exit</string>
    <string name="exit_dialog_title">Exit from app?</string>
    <string name="exit_dialog_message">All of your data that you are logged will be deleted permanently</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="clear_hours">Remove</string>
</resources>

    <!--файл в който се описват текстовете на английски които се използва в приложението-->