<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainFragment">

    <include
        android:id="@+id/view_info"
        layout="@layout/layout_day_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/view_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_calendar"
        layout="@layout/layout_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/text_month_days_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/default_offset"
        android:layout_marginBottom="@dimen/default_offset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_labels_colorNormal="@color/primary"
        app:menu_labels_colorPressed="@color/primary"
        app:srcCompat="@android:drawable/ic_input_add"
        fab:menu_colorNormal="@color/primary"
        fab:menu_colorPressed="@color/primary"
        tools:ignore="ContentDescription">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_unpaid_time_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_alarm_off_24"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            fab:fab_label="@string/time_off_unpaid" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_time_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_self_improvement_24"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            fab:fab_label="@string/time_off" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_sick_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hospital"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            fab:fab_label="@string/sick_leave" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_overtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_more_time_24"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            fab:fab_label="@string/overtime" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_working_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_access_time_24"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            fab:fab_label="@string/work_time" />

    </com.github.clans.fab.FloatingActionMenu>

    <TextView
        android:id="@+id/text_month_days_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_offset"
        android:paddingStart="@dimen/double_offset"
        android:paddingTop="@dimen/double_offset"
        android:paddingEnd="0dp"
        android:paddingBottom="@dimen/double_offset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Работни дни: 2, Почивни дни 28" />

</androidx.constraintlayout.widget.ConstraintLayout>